--- a/style2.css
+++ b/style2.css
@@ -652,7 +652,7 @@ small{
     display: flex;
 }
 
-.masitah, .josh, .kazuyuki, .amit, .toni, .sayan, .nabila,  .kaixing, .zhicon, .pranjal, .manvi {
+.masitah, .josh, .kazuyuki, .amit, .toni, .sayan, .nabila,  .kaixing, .zhicon, .pranjal, .manvi, .eunice {
     flex: 1;
 }
 
@@ -660,7 +660,7 @@ small{
     margin-left: 1rem;
 }
 
-.briane, .yangLi, .shio, .diksha, .jordan, .umar, .zhicong, .simran {
+.briane, .yangLi, .shio, .diksha, .jordan, .umar, .zhicong, .simran, .yohannes {
     flex: 1;
     margin-left: 1rem;
 }
@@ -928,7 +928,7 @@ small{
         flex-direction: column;
     }
 
-    .briane, .yangLi, .shio, .diksha, .jordan, .umar, .zhicong, .simran, .masitah {
+    .briane, .yangLi, .shio, .diksha, .jordan, .umar, .zhicong, .simran, .masitah, .yohannes {
         margin-left: 0;
         margin-top: 1rem;
     }
